Chat button truncation fix on narrow windows. Updated change log for new chat features.
FossilOrigin-Name: d92a8f07b87c1239e6ddff39f9944dd77c4c0217198cfece20fcaa81657532ba

--- a/src/style.chat.css
+++ b/src/style.chat.css
@@ -186,7 +186,7 @@ body.chat:not(.chat-only-mode) #chat-input-area{
 #chat-input-field {
   display: inline-block/*supposed workaround for Chrome weirdness*/;
   padding: 0.2em;
-  flex: 50 1 85%;
+  flex: 2 20 auto;
   background-color: rgba(156,156,156,0.3);
   overflow: auto;
 }
@@ -223,7 +223,7 @@ body.chat #chat-input-line.compact #chat-input-field {
 }
 
 body.chat #chat-edit-buttons {
-  flex: 1 1 auto;
+  flex: 0 1 auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
